<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/drawer_new_resume"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/drawer_new_resume" />
        <item
            android:id="@+id/drawer_backup_resource"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/drawer_backup_resource" />
        <item
            android:id="@+id/drawer_privacy_policy"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/drawer_privacy_policy" />
        <item
            android:id="@+id/drawer_about_us"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_about_us" />
        <item
            android:id="@+id/drawer_rate_us"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/drawer_rate_us"/>
    </group>

    <!--<item android:title="Help">-->
        <!--<menu>-->

        <!--</menu>-->
    <!--</item>-->

</menu>
