<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_menu_camera"
        android:orderInCategory="100"
        android:title="@string/action_duplicate"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_menu_manage"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_menu_send"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />

</menu>